iptables/rules.v4
# Generated by iptables-save v1.8.11 on Mon Jul 28 00:00:47 2025
*nat
:PREROUTING ACCEPT [35:5102]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [700:53248]
:POSTROUTING ACCEPT [700:53248]
COMMIT
# Completed on Mon Jul 28 00:00:47 2025
# Generated by iptables-save v1.8.11 on Mon Jul 28 00:00:47 2025
*mangle
:PREROUTING ACCEPT [183685:451996382]
:INPUT ACCEPT [183684:451996052]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [45189:3006760]
:POSTROUTING ACCEPT [45275:3019107]
COMMIT
# Completed on Mon Jul 28 00:00:47 2025
# Generated by iptables-save v1.8.11 on Mon Jul 28 00:00:47 2025
*raw
:PREROUTING ACCEPT [183685:451996382]
:OUTPUT ACCEPT [45189:3006760]
COMMIT
# Completed on Mon Jul 28 00:00:47 2025
# Generated by iptables-save v1.8.11 on Mon Jul 28 00:00:47 2025
*security
:INPUT ACCEPT [183570:451979782]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [45169:3004216]
COMMIT
# Completed on Mon Jul 28 00:00:47 2025
# Generated by iptables-save v1.8.11 on Mon Jul 28 00:00:47 2025
*filter
:INPUT DROP [770:51465]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [134:17762]
-A INPUT -i waydroid0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --sports 15,21,22,43,53,80,111,443,445,631,4460,8080,9100 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p udp -m multiport --sports 53,67,68,111,123,137 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p udp -m udp --sport 5353 -j ACCEPT
-A INPUT -p udp -m udp --sport 1900 -j ACCEPT
-A INPUT -p udp -m udp --dport 1900 -j ACCEPT
-A INPUT -p 2 -j ACCEPT
-A INPUT -d 255.255.255.255/32 -p udp -j ACCEPT
-A INPUT -j LOG --log-prefix "IPTABLES-DROP-INPUT: "
-A OUTPUT -o waydroid0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 15,21,22,43,53,80,111,443,445,631,4460,8080,9100 -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 53,67,68,111,123,137,1900,5353 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1900 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p 2 -j ACCEPT
-A OUTPUT -d 255.255.255.255/32 -p udp -j ACCEPT
-A OUTPUT -d 239.255.255.250/32 -p udp -j ACCEPT
-A OUTPUT -j LOG --log-prefix "IPTABLES-DROP-OUTPUT: "
COMMIT
# Completed on Mon Jul 28 00:00:47 2025
