iptables/rules.v6
# Generated by ip6tables-save v1.8.11 on Mon Jul 28 00:01:05 2025
*nat
:PREROUTING ACCEPT [27:5180]
:INPUT ACCEPT [1:176]
:OUTPUT ACCEPT [361:202683]
:POSTROUTING ACCEPT [361:202683]
COMMIT
# Completed on Mon Jul 28 00:01:05 2025
# Generated by ip6tables-save v1.8.11 on Mon Jul 28 00:01:05 2025
*mangle
:PREROUTING ACCEPT [64693:72758427]
:INPUT ACCEPT [64693:72758427]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20188:5298920]
:POSTROUTING ACCEPT [20184:5291638]
COMMIT
# Completed on Mon Jul 28 00:01:05 2025
# Generated by ip6tables-save v1.8.11 on Mon Jul 28 00:01:05 2025
*raw
:PREROUTING ACCEPT [64699:72759027]
:OUTPUT ACCEPT [20194:5299520]
COMMIT
# Completed on Mon Jul 28 00:01:05 2025
# Generated by ip6tables-save v1.8.11 on Mon Jul 28 00:01:05 2025
*security
:INPUT ACCEPT [64671:72753637]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20188:5291852]
COMMIT
# Completed on Mon Jul 28 00:01:05 2025
# Generated by ip6tables-save v1.8.11 on Mon Jul 28 00:01:05 2025
*filter
:INPUT DROP [2:176]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [82:102614]
-A INPUT -i waydroid0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --sports 15,21,22,43,53,80,111,443,445,631,4460,8080,9100 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p udp -m multiport --sports 53,67,68,111,123,137 -j ACCEPT
-A INPUT -p udp -m udp --sport 1900 -j ACCEPT
-A INPUT -p udp -m udp --sport 5353 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p udp -m udp --sport 547 --dport 546 -j ACCEPT
-A INPUT -s 2800:3f0::/32 -p udp -j ACCEPT
-A INPUT -s 2800:3f0::/32 -p tcp -j ACCEPT
-A INPUT -s 2001:4860::/32 -p udp -j ACCEPT
-A INPUT -s 2001:4860::/32 -p tcp -j ACCEPT
-A INPUT -j LOG --log-prefix "IP6TABLES-DROP-INPUT: "
-A OUTPUT -o waydroid0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 15,21,22,43,53,80,111,443,445,631,4460,8080,9100 -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 53,67,68,111,123,137,1900,5353 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 33434:33534 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1900 -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -p udp -m udp --sport 546 --dport 547 -j ACCEPT
-A OUTPUT -j LOG --log-prefix "IP6TABLES-DROP-OUTPUT: "
COMMIT

# Completed on Mon Jul 28 00:01:05 2025
